tests/fixtures/errors/union_arm_private.full
error[E0101]: 'boxArm' is not public on type 'shape'
 --> union_arm_private.z:8:14
   8 |     s: shape.boxArm 5
     |              ^^^^^^
1 error found
